# SR_emotion_engine

./: CMakeLists.txt  README.md
para_txt/: Stimuli.txt  alma_parameter.txt  miralab_parameter.txt  parameter.txt  parameter_w_negative_personality.txt  parameter_w_positive_personality.txt
src/: AffectiveSystem.cpp  AffectiveSystem.h  BasicMath.cpp  BasicMath.h  Datastructure.cpp  Datastructure.h  EmotionEngineServer.hpp  InitMoodServer.hpp  Probability.cpp  Probability.h  SpeechInput_server.hpp  alma_AffectiveSystem.cpp  alma_AffectiveSystem.h  axis.cpp  axis.h  collision_detection.cpp  collision_detection.h  control_interface.cpp  control_interface.h  dialogue.cpp  dialogue.h  game_theory.cpp  game_theory.h  global_declaration.cpp  global_declaration.h  miralab_AffectiveSystem.cpp  miralab_AffectiveSystem.h  vh_control_method.cpp  vh_control_method.h
test/: EmotionEngineClient.py
